// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component renders Badge component when isReady false 1`] = `
<div>
  <div
    class="ViewStyled-sc-rqe5sa-0 ViewStyled__BoxShadowStyled-sc-rqe5sa-2 cRwSQg dyHjLC"
    display="inline-block"
  >
    <p
      class="TextStyled__BadgeStyled-sc-9xia41-4 kCrpfs"
      color="#FD8F00"
    >
      23PTS away
    </p>
  </div>
</div>
`;

exports[`Badge Component renders Badge component when isReady true 1`] = `
<div>
  <div
    class="ViewStyled-sc-rqe5sa-0 ViewStyled__BoxShadowStyled-sc-rqe5sa-2 bvpxKB fjiEkL"
    display="inline-block"
  >
    <p
      class="TextStyled__BadgeStyled-sc-9xia41-4 ioJMpp"
      color="#00D89D"
    >
      Ready
    </p>
  </div>
</div>
`;
